feat: btc price page and nft page done

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,25 +3,38 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-rgb: 255, 255, 255;
+  --background-rgb: 23, 17, 28;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+@font-face {
+  font-family: "PostGrotesk";
+  src: url("/fonts/PlusJakartaSans-Regular.ttf");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "PostGrotesk";
+  src: url("/fonts/PlusJakartaSans-Medium.ttf");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "PostGrotesk";
+  src: url("/fonts/PlusJakartaSans-Bold.otf");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  margin: auto !important;
+  max-width: 2000px !important;
+  background: #110d22 !important;
+  color: rgb(var(--foreground-rgb)) !important;
+  font-family: "Plus Jakarta Sans", sans-serif !important;
 }
